# books

./: Dockerfile  app.py  docker-compose.yaml  logging_config.py  pyproject.toml
.github/workflows/: python-app.yml
books/api/: v0.py
books/db/: models.py
tests/unit/books/test_api/: test_v0.py
