[project]
name = "books"
version = "0.1.0"
description = "A project for managing books"
authors = [
    {name = "Ope Ogunkola", email = "ogunks900@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi[standard]",
    "sqlalchemy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
